[gd_scene load_steps=83 format=2]

[ext_resource path="res://logo.gd" type="Script" id=1]
[ext_resource path="res://external/logo_animation/full_animation_small_000.png" type="Texture" id=2]
[ext_resource path="res://external/logo_animation/full_animation_small_001.png" type="Texture" id=3]
[ext_resource path="res://external/logo_animation/full_animation_small_002.png" type="Texture" id=4]
[ext_resource path="res://external/logo_animation/full_animation_small_003.png" type="Texture" id=5]
[ext_resource path="res://external/logo_animation/full_animation_small_004.png" type="Texture" id=6]
[ext_resource path="res://external/logo_animation/full_animation_small_005.png" type="Texture" id=7]
[ext_resource path="res://external/logo_animation/full_animation_small_006.png" type="Texture" id=8]
[ext_resource path="res://external/logo_animation/full_animation_small_007.png" type="Texture" id=9]
[ext_resource path="res://external/logo_animation/full_animation_small_008.png" type="Texture" id=10]
[ext_resource path="res://external/logo_animation/full_animation_small_009.png" type="Texture" id=11]
[ext_resource path="res://external/logo_animation/full_animation_small_010.png" type="Texture" id=12]
[ext_resource path="res://external/logo_animation/full_animation_small_011.png" type="Texture" id=13]
[ext_resource path="res://external/logo_animation/full_animation_small_012.png" type="Texture" id=14]
[ext_resource path="res://external/logo_animation/full_animation_small_013.png" type="Texture" id=15]
[ext_resource path="res://external/logo_animation/full_animation_small_014.png" type="Texture" id=16]
[ext_resource path="res://external/logo_animation/full_animation_small_015.png" type="Texture" id=17]
[ext_resource path="res://external/logo_animation/full_animation_small_016.png" type="Texture" id=18]
[ext_resource path="res://external/logo_animation/full_animation_small_017.png" type="Texture" id=19]
[ext_resource path="res://external/logo_animation/full_animation_small_018.png" type="Texture" id=20]
[ext_resource path="res://external/logo_animation/full_animation_small_019.png" type="Texture" id=21]
[ext_resource path="res://external/logo_animation/full_animation_small_020.png" type="Texture" id=22]
[ext_resource path="res://external/logo_animation/full_animation_small_021.png" type="Texture" id=23]
[ext_resource path="res://external/logo_animation/full_animation_small_022.png" type="Texture" id=24]
[ext_resource path="res://external/logo_animation/full_animation_small_023.png" type="Texture" id=25]
[ext_resource path="res://external/logo_animation/full_animation_small_024.png" type="Texture" id=26]
[ext_resource path="res://external/logo_animation/full_animation_small_025.png" type="Texture" id=27]
[ext_resource path="res://external/logo_animation/full_animation_small_026.png" type="Texture" id=28]
[ext_resource path="res://external/logo_animation/full_animation_small_027.png" type="Texture" id=29]
[ext_resource path="res://external/logo_animation/full_animation_small_028.png" type="Texture" id=30]
[ext_resource path="res://external/logo_animation/full_animation_small_029.png" type="Texture" id=31]
[ext_resource path="res://external/logo_animation/full_animation_small_030.png" type="Texture" id=32]
[ext_resource path="res://external/logo_animation/full_animation_small_031.png" type="Texture" id=33]
[ext_resource path="res://external/logo_animation/full_animation_small_032.png" type="Texture" id=34]
[ext_resource path="res://external/logo_animation/full_animation_small_033.png" type="Texture" id=35]
[ext_resource path="res://external/logo_animation/full_animation_small_034.png" type="Texture" id=36]
[ext_resource path="res://external/logo_animation/full_animation_small_035.png" type="Texture" id=37]
[ext_resource path="res://external/logo_animation/full_animation_small_036.png" type="Texture" id=38]
[ext_resource path="res://external/logo_animation/full_animation_small_037.png" type="Texture" id=39]
[ext_resource path="res://external/logo_animation/full_animation_small_038.png" type="Texture" id=40]
[ext_resource path="res://external/logo_animation/full_animation_small_039.png" type="Texture" id=41]
[ext_resource path="res://external/logo_animation/full_animation_small_040.png" type="Texture" id=42]
[ext_resource path="res://external/logo_animation/full_animation_small_041.png" type="Texture" id=43]
[ext_resource path="res://external/logo_animation/full_animation_small_042.png" type="Texture" id=44]
[ext_resource path="res://external/logo_animation/full_animation_small_043.png" type="Texture" id=45]
[ext_resource path="res://external/logo_animation/full_animation_small_044.png" type="Texture" id=46]
[ext_resource path="res://external/logo_animation/full_animation_small_045.png" type="Texture" id=47]
[ext_resource path="res://external/logo_animation/full_animation_small_046.png" type="Texture" id=48]
[ext_resource path="res://external/logo_animation/full_animation_small_047.png" type="Texture" id=49]
[ext_resource path="res://external/logo_animation/full_animation_small_048.png" type="Texture" id=50]
[ext_resource path="res://external/logo_animation/full_animation_small_049.png" type="Texture" id=51]
[ext_resource path="res://external/logo_animation/full_animation_small_050.png" type="Texture" id=52]
[ext_resource path="res://external/logo_animation/full_animation_small_051.png" type="Texture" id=53]
[ext_resource path="res://external/logo_animation/full_animation_small_052.png" type="Texture" id=54]
[ext_resource path="res://external/logo_animation/full_animation_small_053.png" type="Texture" id=55]
[ext_resource path="res://external/logo_animation/full_animation_small_054.png" type="Texture" id=56]
[ext_resource path="res://external/logo_animation/full_animation_small_055.png" type="Texture" id=57]
[ext_resource path="res://external/logo_animation/full_animation_small_056.png" type="Texture" id=58]
[ext_resource path="res://external/logo_animation/full_animation_small_057.png" type="Texture" id=59]
[ext_resource path="res://external/logo_animation/full_animation_small_058.png" type="Texture" id=60]
[ext_resource path="res://external/logo_animation/full_animation_small_059.png" type="Texture" id=61]
[ext_resource path="res://external/logo_animation/full_animation_small_060.png" type="Texture" id=62]
[ext_resource path="res://external/logo_animation/full_animation_small_061.png" type="Texture" id=63]
[ext_resource path="res://external/logo_animation/full_animation_small_062.png" type="Texture" id=64]
[ext_resource path="res://external/logo_animation/full_animation_small_063.png" type="Texture" id=65]
[ext_resource path="res://external/logo_animation/full_animation_small_064.png" type="Texture" id=66]
[ext_resource path="res://external/logo_animation/full_animation_small_065.png" type="Texture" id=67]
[ext_resource path="res://external/logo_animation/full_animation_small_066.png" type="Texture" id=68]
[ext_resource path="res://external/logo_animation/full_animation_small_067.png" type="Texture" id=69]
[ext_resource path="res://external/logo_animation/full_animation_small_068.png" type="Texture" id=70]
[ext_resource path="res://external/logo_animation/full_animation_small_069.png" type="Texture" id=71]
[ext_resource path="res://external/logo_animation/full_animation_small_070.png" type="Texture" id=72]
[ext_resource path="res://external/logo_animation/full_animation_small_071.png" type="Texture" id=73]
[ext_resource path="res://external/logo_animation/full_animation_small_072.png" type="Texture" id=74]
[ext_resource path="res://external/logo_animation/full_animation_small_073.png" type="Texture" id=75]
[ext_resource path="res://external/logo_animation/full_animation_small_074.png" type="Texture" id=76]
[ext_resource path="res://external/logo_animation/full_animation_small_075.png" type="Texture" id=77]
[ext_resource path="res://external/logo_animation/full_animation_small_076.png" type="Texture" id=78]
[ext_resource path="res://external/logo_animation/full_animation_small_077.png" type="Texture" id=79]
[ext_resource path="res://external/logo_animation/full_animation_small_078.png" type="Texture" id=80]
[ext_resource path="res://external/logo_animation/full_animation_small_079.png" type="Texture" id=81]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ) ],
"loop": false,
"name": "default",
"speed": 60.0
} ]

[node name="logo" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="margin_container" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sold_grey_bg" type="TextureRect" parent="margin_container"]
margin_right = 1380.0
margin_bottom = 780.0
texture = ExtResource( 2 )
expand = true

[node name="center_container" type="CenterContainer" parent="margin_container"]
margin_right = 1380.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="control" type="Control" parent="margin_container/center_container"]
margin_left = 412.0
margin_top = 342.0
margin_right = 967.0
margin_bottom = 438.0
rect_min_size = Vector2( 555, 96 )

[node name="animated_sprite" type="AnimatedSprite" parent="margin_container/center_container/control"]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
centered = false

[node name="begin_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="end_timer" type="Timer" parent="."]
wait_time = 2.1
one_shot = true
autostart = true

[node name="delete_timer" type="Timer" parent="."]
wait_time = 2.6
one_shot = true
autostart = true

[node name="tween" type="Tween" parent="."]

[connection signal="timeout" from="begin_timer" to="margin_container" method="begin"]
[connection signal="timeout" from="end_timer" to="margin_container" method="end"]
[connection signal="timeout" from="delete_timer" to="margin_container" method="delete"]
